# testzak

./: .dockerignore  .gitignore  .replit  404.html  AUTOMATION_PLAYBOOK.md  CLAUDE.md  DEPLOY.md  DEPLOY_FREE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  e2e_test.py  fly.toml  index.html  netlify.toml  nginx.render.conf  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  replit.md  run_all_tests.py  start.command  vercel.json
.agents/: agent_assets_metadata.toml
.claude/: launch.json
assets/: index-3uUmlOuN.js  index-B5MTN5G-.js  index-BZOv4Tfq.js  index-BxQwoisF.css  index-CFeGNvxf.js  index-D8-ls2kv.css  index.es-BknpEFtQ.js  index.es-CSA0zXor.js  index.es-CWf4mtqy.js  index.es-D0E8w3G9.js
attached_assets/: 2025-10-23_Приложение_11_БДДС-ИТ-3_измененный_(1)_1774015709454.xlsx  Pasted---1774023259846_1774023259847.txt  Pasted---1774023944644_1774023944644.txt  Pasted---1775929224413_1775929224414.txt  Pasted---1775970392863_1775970392863.txt  Pasted---1775972663098_1775972663098.txt  Pasted---1775975109345_1775975109345.txt  Pasted---1775976956226_1775976956226.txt  Pasted---1775978543960_1775978543961.txt  Pasted---1775982794636_1775982794636.txt  Pasted---1775986839884_1775986839884.txt  Pasted---1775988377975_1775988377976.txt  Pasted---1776055782298_1776055782299.txt  Pasted---1776092956585_1776092956585.txt  Pasted--1-DO-1774014835644_1774014835645.txt  Pasted--13-6-1-6--1774172431653_1774172431654.txt  Pasted--15-4-1775983596284_1775983596285.txt  (+61 more)
backend/: Dockerfile  app.py  (+15 more)
(+171 files in other folders)
