[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.14.1",
    "fastapi==0.115.6",
    "gunicorn==22.0.0",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.10.1",
    "python-docx>=1.2.0",
    "python-multipart==0.0.18",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]
